--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <h2 id="profile-name">Gxin</h2>
         <p id="bio">Loading bio...</p>
         <div class="terminal-box">
-          <p class="line"><span class="prefix">$</span> <span id="type-line"></span><span class="cursor">_</span></p>
-          <p class="line muted" id="type-output">bootstrapping portfolio...</p>
+          <pre class="hello-code" id="hello-code" aria-live="polite"></pre>
         </div>
       </div>
       <div class="hero-right">
