fix: harden hero script compatibility after deploy

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <p id="bio">Loading bio...</p>
         <div class="terminal-box">
           <pre class="hello-code" id="hello-code" aria-live="polite"></pre>
+          <div class="legacy-typewriter" aria-hidden="true">
+            <span id="type-line"></span>
+            <span id="type-output"></span>
+          </div>
         </div>
       </div>
       <div class="hero-right">
@@ -91,6 +95,6 @@
     <p>© <span id="year"></span> Gxin. Built with keyboard + curiosity.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=20260218a"></script>
 </body>
 </html>
